homework number 5 and 6.